adding pages and links
added new blank pages and appropriate links, changed some styling in the navbar

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <nav class="navbar ms-auto" id="navBar">
@@ -18,8 +18,8 @@
         <div class="menu">
             <li class="About Us"><a href="">About Us</a></li>
             <li><a href="">Our Team</a></li>
-            <li><a href="">Events</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="events.html">Events</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </div>
     </ul>
 </nav>
