mobile formatting and adding more sections

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>SDSS</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -40,9 +40,6 @@
                 <div class="intro2">
                     and Statistics
                 </div>
-                <div class="button-container">
-                    <button type="button" class='get-in-touch'>Get in Touch</button>
-                </div>
 
             </div>
 
@@ -56,6 +53,10 @@
                     engage in social good in the world of Data Science and Statistics.
                 </div>
 
+            </div>
+
+            <div class="button-container">
+                <button type="button" class='get-in-touch'>Get in Touch</button>
             </div>
 
         </div>
@@ -101,7 +102,48 @@
 
             </div>
         </div>
+        <div class="our-teams">
+            <div class="subtitle">Our Teams</div>
+            <div class="our-teams-container">
+                <div class="row-1">
+                    <div class="our-teams-button">
+                        <button type="button" class="our-teams-buttons">Internal Team</button>
+                    </div>
+                    <div class="our-teams-button">
+                        <button type="button" class="our-teams-buttons">Academic Development</button>
+                    </div>
+                </div>
+
+                <div class="row-2">
+                    <div class="our-teams-button">
+                        <button type="button" class="our-teams-buttons">Professional Development</button>
+                    </div>
+                    <div class="our-teams-button">
+                        <button type="button" class="our-teams-buttons">Consulting</button>
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
     </div>
+
+    <footer class="footer">
+        <div class="footer-images">
+            <img src="sdss-website-images/logo%202%201.png" alt="white-logo"/>
+            <img src="sdss-website-images/image%20(3)%201.png" alt="uoft"/>
+        </div>
+        <div class="copyright">
+            Students in Data Science and Statistics &copy 2023
+        </div>
+        <div class="footer-socials">
+            <a href="https://instagram.com/sdssuoft"><img src="sdss-website-images/image%203.png" alt="sdss-ig"/> </a>
+            <a href="https://www.linkedin.com/company/students-in-data-science-and-statistics-sdss-uoft/">
+                <img src="sdss-website-images/image%201.png" alt="sdss-linkedin"/>
+            </a>
+            <img src="sdss-website-images/image%202.png" alt="sdss-discord"/>
+        </div>
+    </footer>
 
 
 </body>
