fixed mobile and added hamburger

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <a href="https://www.linkedin.com/company/students-in-data-science-and-statistics-sdss-uoft/">
                 <img src="sdss-website-images/image%201.png" alt="sdss-linkedin"/>
             </a>
-            <img src="sdss-website-images/image%202.png" alt="sdss-discord"/>
+<!--            <img src="sdss-website-images/image%202.png" alt="sdss-discord"/>-->
         </div>
     </footer>
 
