minor styling changes
added back intro logo, changed some spacing for footer

--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
             </div>
 
             <div class="intro-body-container">
-<!--                I think we should integrate this into the web page-->
-<!--                <img src="sdss-website-images/sdss-intro-img.png" alt="sdss-intro-img"/>-->
+                <img src="sdss-website-images/sdss-intro-img.png" alt="sdss-intro-img"/>
                 <div class="intro-body1">
                     Welcome to the world of data and technology at UofT.
                 </div>
