adding more sections

--- a/index.html
+++ b/index.html
@@ -137,6 +137,89 @@
 
             </div>
         </div>
+        <div class="events">
+            <div class="subtitle">
+                Events
+            </div>
+            <div class="coming-soon">
+                Coming Soon!
+            </div>
+        </div>
+        <div class="join-us">
+            <div class="subtitle">
+                Join Us
+            </div>
+            <div class="join-us-description">
+                Check out the “Roles Documents” linked below to see if we are currently
+                recruiting for any Executive positions.
+
+                If not, we would love to have you as one of our general members
+                where you get many cool benefits.
+            </div>
+
+            <div class="join-us-buttons">
+                <div class="join-us-button">
+                    <button type="button" class='join-us-executive'>Executive Team Application</button>
+                </div>
+                <div class="join-us-button">
+                    <button type="button" class="join-us-consulting">Consulting Team Application</button>
+                </div>
+                <div class="join-us-button">
+                    <button type="button" class="join-us-gen-mem">General Member Application</button>
+                </div>
+
+            </div>
+        </div>
+        <div class="Contact Us">
+<!--            <div class="subtitle">-->
+<!--                Contact Us-->
+<!--            </div>-->
+<!--            <form action="data/contact-form-responses.php">-->
+<!--                <div class="row">-->
+<!--                    <div class="col-25">-->
+<!--                        <label for="name">Name</label>-->
+<!--                    </div>-->
+<!--                    <div class="col-75">-->
+<!--                        <input type="text" id="name" name="name" placeholder="John Doe">-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="row">-->
+<!--                    <div class="col-25">-->
+<!--                        <label for="email">Email</label>-->
+<!--                    </div>-->
+<!--                    <div class="col-75">-->
+<!--                        <input type="text" id="email" name="email" placeholder="johndoe@gmail.com">-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="row">-->
+<!--                    <div class="col-25">-->
+<!--                        <label for="company">Company</label>-->
+<!--                    </div>-->
+<!--                    <div class="col-75">-->
+<!--                        <input type="text" id="company" name="company" placeholder="Company Name">-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="row">-->
+<!--                    <div class="col-25">-->
+<!--                        <label for="company">Role</label>-->
+<!--                    </div>-->
+<!--                    <div class="col-75">-->
+<!--                        <input type="text" id="role" name="role" placeholder="i.e. Manager">-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="row">-->
+<!--                    <div class="col-25">-->
+<!--                        <label for="subject">Message</label>-->
+<!--                    </div>-->
+<!--                    <div class="col-75">-->
+<!--                        <textarea id="subject" name="subject" placeholder="Write your message.." style="height:200px"></textarea>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="row">-->
+<!--                    <input type="submit" value="Submit">-->
+<!--                </div>-->
+<!--            </form>-->
+        </div>
     </div>
 
     <footer class="footer">
