adding teams pages and formatting

--- a/pages/our-teams-pages/aca-dev.html
+++ b/pages/our-teams-pages/aca-dev.html
@@ -1,10 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8"/>
+        <title>SDSS</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="/css/teams.css" />
+    </head>
+
+<nav class="navbar ms-auto" id="navBar">
+    <!-- LOGO -->
+    <a href="/index.html"><img src="/sdss-website-images/black-sdss-logo.png" alt="logo" /></a>
+    <!-- NAVIGATION MENU -->
+    <ul class="nav-links">
+        <input type="checkbox" id="checkbox_toggle" />
+        <label for="checkbox_toggle" class="hamburger">&#9776;</label>
+        <!-- NAVIGATION MENUS -->
+        <div class="menu">
+            <li class="About Us"><a href="">About Us</a></li>
+            <li class="our-team-navbar">
+                <a href="#our-teams">Our Team</a>
+            <ul class="dropdown">
+                <li><a href="/pages/our-teams-pages/internal-team.html">Internal</a></li>
+                <li><a href="/pages/our-teams-pages/prof-dev.html">Professional Development</a></li>
+                <li><a href="/pages/our-teams-pages/aca-dev.html">Academic Development</a></li>
+                <li><a href="/pages/our-teams-pages/consulting.html">Consulting</a></li>
+            </ul>
+            <li><a href="events.html">Events</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </div>
+    </ul>
+</nav>
+
 <body>
+    <div class="content">
+        <div class="team-title">Academic Development</div>
+        <div class="team-description">Our group that enables a diverse community of passionate individuals to explore, learn, grow, and engage in social good in the world of Data Science and Statistics.</div>
+        <div class="team-image-row">
+            <div class="exec-container">
+                <img class="exec-image"/>
+                <div class="exec-caption">
+                    <div class="exec-name">Danish Ahmed</div>
+                <img src="/sdss-website-images/exec-seperator.png" class="exec-separator"/>
+                <div class="exec-position">Co-VP of AD</div>
+                <div class="exec-socials"></div>
+                </div>
+                
+            </div>
+            <div class="exec-container">
+                <img class="exec-image"/>
+                <div class="exec-name">Raghav Singha</div>
+                <img src="/sdss-website-images/exec-seperator.png" class="exec-separator"/>
+                <div class="exec-position">Co-VP of AD</div>
+                <div class="exec-socials"></div>
+            </div>
+        </div>
+
+        <div class="subteam-title">Logistics</div>
+        <div class="team-image-row">
+            <div class="exec-container">
+                <img class="exec-image"/>
+                <div class="exec-name"></div>
+                <img src="/sdss-website-images/exec-seperator.png" class="exec-separator"/>
+                <div class="exec-position">Co-Director of Logistics</div>
+                <div class="exec-socials"></div>
+            </div>
+
+            <div class="exec-container">
+                <img class="exec-image"/>
+                <div class="exec-name"></div>
+                <img src="/sdss-website-images/exec-seperator.png" class="exec-separator"/>
+                <div class="exec-position">Co-Director of Logistics</div>
+                <div class="exec-socials"></div>
+            </div>
+        </div>
+
+        <div class="subteam-title">Outreach</div>
+        <div class="team-image-row">
+            <div class="exec-container">
+                <img class="exec-image"/>
+                <div class="exec-caption">
+                    <div class="exec-name">Lucia Kim</div>
+                <img src="/sdss-website-images/exec-seperator.png" class="exec-separator"/>
+                <div class="exec-position">Co-Director of Outreach</div>
+                <div class="exec-socials"></div>
+                </div>
+                
+            </div>
+            <div class="exec-container">
+                <img class="exec-image"/>
+                <div class="exec-name"></div>
+                <img src="/sdss-website-images/exec-seperator.png" class="exec-separator"/>
+                <div class="exec-position">Co-Director of Outreach</div>
+                <div class="exec-socials"></div>
+            </div>
+        </div>
+    </div>
 
 </body>
+
+<footer class="footer">
+    <div class="footer-images">
+        <img src="/sdss-website-images/logo%202%201.png" alt="white-logo"/>
+        <img src="/sdss-website-images/image%20(3)%201.png" alt="uoft"/>
+    </div>
+    <div class="copyright">
+        Students in Data Science and Statistics &copy 2023
+    </div>
+    <div class="footer-socials">
+        <a href="https://instagram.com/sdssuoft"><img src="/sdss-website-images/image%203.png" alt="sdss-ig"/> </a>
+        <a href="https://www.linkedin.com/company/students-in-data-science-and-statistics-sdss-uoft/">
+            <img src="/sdss-website-images/image%201.png" alt="sdss-linkedin"/>
+        </a>
+<!--            <img src="sdss-website-images/image%202.png" alt="sdss-discord"/>-->
+    </div>
+</footer>   
+
 </html>
