adding footers and discord logo

--- a/contact.html
+++ b/contact.html
@@ -9,22 +9,37 @@
   <link rel="stylesheet" href="css/style.css" />
 </head>
 
-<nav class="navbar ms-auto" id="navBar">
-    <!-- LOGO -->
-    <a href="index.html"><img src="sdss-website-images/black-sdss-logo.png" alt="logo" /></a>
-    <!-- NAVIGATION MENU -->
-    <ul class="nav-links">
-        <!-- NAVIGATION MENUS -->
-        <div class="menu">
-            <li class="About Us"><a href="index.html">About Us</a></li>
-            <li><a href="">Our Team</a></li>
-            <li><a href="events.html">Events</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </div>
-    </ul>
-</nav>
-
 <body>
-   
+    <nav class="navbar ms-auto" id="navBar">
+        <!-- LOGO -->
+        <a href="index.html"><img src="sdss-website-images/black-sdss-logo.png" alt="logo" /></a>
+        <!-- NAVIGATION MENU -->
+        <ul class="nav-links">
+            <!-- NAVIGATION MENUS -->
+            <div class="menu">
+                <li class="About Us"><a href="index.html">About Us</a></li>
+                <li><a href="">Our Team</a></li>
+                <li><a href="events.html">Events</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </div>
+        </ul>
+    </nav>
+
+    <footer class="footer">
+        <div class="footer-images">
+            <img src="sdss-website-images/logo%202%201.png" alt="white-logo"/>
+            <img src="sdss-website-images/image%20(3)%201.png" alt="uoft"/>
+        </div>
+        <div class="copyright">
+            Students in Data Science and Statistics &copy 2023
+        </div>
+        <div class="footer-socials">
+            <a href="https://instagram.com/sdssuoft"><img src="sdss-website-images/image%203.png" alt="sdss-ig"/> </a>
+            <a href="https://www.linkedin.com/company/students-in-data-science-and-statistics-sdss-uoft/">
+                <img src="sdss-website-images/image%201.png" alt="sdss-linkedin"/>
+            </a>
+            <a href="https://discord.gg/9b8Z5aGk36"><img src="sdss-website-images/image 2.png" alt="sdss-discord"></a>
+        </div>
+    </footer>
 </body>
 </html>
