--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             <a href="https://www.linkedin.com/company/students-in-data-science-and-statistics-sdss-uoft/">
                 <img src="sdss-website-images/image%201.png" alt="sdss-linkedin"/>
             </a>
-<!--            <img src="sdss-website-images/image%202.png" alt="sdss-discord"/>-->
+            <a href="https://discord.gg/9b8Z5aGk36"><img src="sdss-website-images/image 2.png" alt="sdss-discord"></a>
         </div>
     </footer>
 
