changes to join us section

--- a/index.html
+++ b/index.html
@@ -156,12 +156,14 @@
                 Join Us
             </div>
             <div class="join-us-description">
-                Check out the “Roles Documents” linked below to see if we are currently
-                recruiting for any Executive positions.
+                <p>Check out the “Roles Documents” linked below to see if we are currently
+                recruiting for any Executive positions.</p>
 
-                If not, we would love to have you as one of our general members
-                where you get many cool benefits.
+                <p>If not, we would love to have you as one of our general members
+                where you get many cool benefits.</p>
             </div>
+
+            <img class="join-us-img" src="sdss-website-images/squirrel.png" alt="join us image">
 
             <div class="join-us-buttons">
                 <div class="join-us-button">
@@ -172,9 +174,9 @@
                 </div>
                 <div class="join-us-button">
                     <button type="button" class="join-us-gen-mem">General Member Application</button>
-                </div>
-
+                </div> 
             </div>
+           
         </div>
         <div class="Contact Us">
 <!--            <div class="subtitle">-->
