fixed navbar sticky and added functionality to join us buttons

--- a/index.html
+++ b/index.html
@@ -167,14 +167,20 @@
 
             <div class="join-us-buttons">
                 <div class="join-us-button">
-                    <button type="button" class='join-us-executive'>Executive Team Application</button>
+                    <a href="https://forms.gle/VYzZGmZhqJVYeJbL9">
+                        <button type="button" class='join-us-executive'>Graphic Designer Application</button>
+                    </a>
                 </div>
                 <div class="join-us-button">
-                    <button type="button" class="join-us-consulting">Consulting Team Application</button>
+                    <a href="https://forms.gle/pY91K5Ndy3jbpsQZ9">
+                        <button type="button" class="join-us-consulting">Consulting Team Application</button>
+                    </a>
                 </div>
                 <div class="join-us-button">
-                    <button type="button" class="join-us-gen-mem">General Member Application</button>
-                </div> 
+                    <a href="https://forms.gle/GGwNJKUjZECsadFK8">
+                        <button type="button" class="join-us-gen-mem">General Member Application</button>
+                    </a>
+                </div>
             </div>
            
         </div>
@@ -248,5 +254,6 @@
     </footer>
 
 
+    <script src="index.js"></script>
 </body>
 </html>
