added scrolling animations to fix awkward spacing between sections

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </div>
 
     <div class="content">
-        <div class="about-us">
+        <div class="about-us reveal">
             <div class="subtitle">About Us</div>
             <div class="about-us-container">
                 <div class="about-us-text">
@@ -111,7 +111,7 @@
 
             </div>
         </div>
-        <div class="our-teams" id="our-teams">
+        <div class="our-teams reveal" id="our-teams">
             <div class="subtitle">Our Teams</div>
             <div class="our-teams-container">
                 <div class="row-1">
@@ -143,7 +143,7 @@
 
             </div>
         </div>
-        <div class="events">
+        <div class="events reveal">
             <div class="subtitle">
                 Events
             </div>
@@ -151,7 +151,7 @@
                 Coming Soon!
             </div>
         </div>
-        <div class="join-us">
+        <div class="join-us reveal">
             <div class="subtitle">
                 Join Us
             </div>
@@ -184,7 +184,7 @@
             </div>
            
         </div>
-        <div class="Contact Us">
+        <div class="contact-us reveal">
 <!--            <div class="subtitle">-->
 <!--                Contact Us-->
 <!--            </div>-->
