--- a/pages/our-teams-pages/internal-team.html
+++ b/pages/our-teams-pages/internal-team.html
@@ -56,27 +56,21 @@
                 <div class="exec-socials"></div>
             </div>
         </div>
-
+        
+        <div class="subteam-title">Operations</div>
         <div class="team-image-row">
             <div class="exec-container">
                 <img class="exec-image"/>
-                <div class="exec-name"></div>
+                <div class="exec-name">Amanda Li</div>
                 <img src="/sdss-website-images/exec-seperator.png" class="exec-separator"/>
-                <div class="exec-position">Co-Director of Culture</div>
+                <div class="exec-position">Co-Director of Operations</div>
                 <div class="exec-socials"></div>
             </div>
             <div class="exec-container">
-                <img class="exec-image"/>
-                <div class="exec-name"></div>
+                <img class="exec-image" src="/sdss-website-images//sdss-exec-pictures/siyi-pfp.JPG"/>
+                <div class="exec-name">Siyi Zhu</div>
                 <img src="/sdss-website-images/exec-seperator.png" class="exec-separator"/>
-                <div class="exec-position">Co-Director of Culture</div>
-                <div class="exec-socials"></div>
-            </div>
-            <div class="exec-container">
-                <img class="exec-image"/>
-                <div class="exec-name"></div>
-                <img src="/sdss-website-images/exec-seperator.png" class="exec-separator"/>
-                <div class="exec-position">Director of External Affairs</div>
+                <div class="exec-position">Co-Director of Operations</div>
                 <div class="exec-socials"></div>
             </div>
         </div>
@@ -93,13 +87,13 @@
                 </div>
                 
             </div>
-            <div class="exec-container">
+            <!-- <div class="exec-container">
                 <img class="exec-image"/>
                 <div class="exec-name"></div>
                 <img src="/sdss-website-images/exec-seperator.png" class="exec-separator"/>
                 <div class="exec-position">Graphic Designer</div>
                 <div class="exec-socials"></div>
-            </div>
+            </div> -->
         </div>
 
         <div class="subteam-title">Finance</div>
