--- a/pages/our-teams-pages/prof-dev.html
+++ b/pages/our-teams-pages/prof-dev.html
@@ -36,7 +36,7 @@
 <body>
     <div class="content">
         <div class="team-title">Professional Development</div>
-        <div class="team-description">Our group that enables a diverse community of passionate individuals to explore, learn, grow, and engage in social good in the world of Data Science and Statistics.</div>
+        <div class="team-description">The Professional Development Team is responsible for planning monthly professional development and leadership events for students interested in building a career in Data Science and Statistics. </div>
         <div class="team-image-row">
             <div class="exec-container">
                 <img class="exec-image"/>
