adding exec pics

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <label for="checkbox_toggle" class="hamburger">&#9776;</label>
         <!-- NAVIGATION MENUS -->
         <div class="menu">
-            <li class="About Us"><a href="">About Us</a></li>
+            <li class="About Us"><a href="#about-us">About Us</a></li>
             <li class="our-team-navbar">
                 <a href="#our-teams">Our Team</a>
             <ul class="dropdown">
@@ -72,7 +72,7 @@
     </div>
 
     <div class="content">
-        <div class="about-us reveal">
+        <div class="about-us reveal" id="about-us">
             <div class="subtitle">About Us</div>
             <div class="about-us-container">
                 <div class="about-us-text">
