--- a/pages/our-teams-pages/aca-dev.html
+++ b/pages/our-teams-pages/aca-dev.html
@@ -39,7 +39,7 @@
         <div class="team-description">The Academic Development Team is dedicated to planning monthly academic-based events and gathering resources for students interested in Data Science and Statistics of all different skill levels.</div>
         <div class="team-image-row">
             <div class="exec-container">
-                <img class="exec-image" src="/sdss-website-images/sdss-exec-pictures/danish-pfp.PNG"/>
+                <img class="exec-image" src="/sdss-website-images/sdss-exec-pictures/danish.jpg"/>
                 <div class="exec-caption">
                     <div class="exec-name">Danish Ahmed</div>
                 <img src="/sdss-website-images/exec-seperator.png" class="exec-separator"/>
@@ -49,7 +49,7 @@
                 
             </div>
             <div class="exec-container">
-                <img class="exec-image"/>
+                <img class="exec-image" src="/sdss-website-images/sdss-exec-pictures/raghav.jpg"/>
                 <div class="exec-name">Raghav Singha</div>
                 <img src="/sdss-website-images/exec-seperator.png" class="exec-separator"/>
                 <div class="exec-position">Co-VP of AD</div>
@@ -60,7 +60,7 @@
         <div class="subteam-title">Logistics</div>
         <div class="team-image-row">
             <div class="exec-container">
-                <img class="exec-image" src="/sdss-website-images/sdss-exec-pictures/aaminah-pfp.jpeg"/>
+                <img class="exec-image" src="/sdss-website-images/sdss-exec-pictures/aaminah.jpg"/>
                 <div class="exec-name">Aaminah Ghumman</div>
                 <img src="/sdss-website-images/exec-seperator.png" class="exec-separator"/>
                 <div class="exec-position">Co-Director of Logistics</div>
@@ -79,7 +79,7 @@
         <div class="subteam-title">Outreach</div>
         <div class="team-image-row">
             <div class="exec-container">
-                <img class="exec-image"/>
+                <img class="exec-image" src="/sdss-website-images/sdss-exec-pictures/vicky.jpg"/>
                 <div class="exec-caption">
                     <div class="exec-name">Vicky Chan</div>
                 <img src="/sdss-website-images/exec-seperator.png" class="exec-separator"/>
@@ -89,7 +89,7 @@
                 
             </div>
             <div class="exec-container">
-                <img class="exec-image"/>
+                <img class="exec-image" src="/sdss-website-images/sdss-exec-pictures/siddhant.jpg"/>
                 <div class="exec-name">Sid Mehta</div>
                 <img src="/sdss-website-images/exec-seperator.png" class="exec-separator"/>
                 <div class="exec-position">Co-Director of Outreach</div>
