--- a/pages/our-teams-pages/internal-team.html
+++ b/pages/our-teams-pages/internal-team.html
@@ -18,7 +18,7 @@
         <label for="checkbox_toggle" class="hamburger">&#9776;</label>
         <!-- NAVIGATION MENUS -->
         <div class="menu">
-            <li class="About Us"><a href="">About Us</a></li>
+            <li class="About Us"><a href="#about-us">About Us</a></li>
             <li class="our-team-navbar">
                 <a href="#our-teams">Our Team</a>
             <ul class="dropdown">
@@ -39,7 +39,7 @@
         <div class="team-description">Our group that enables a diverse community of passionate individuals to explore, learn, grow, and engage in social good in the world of Data Science and Statistics.</div>
         <div class="team-image-row">
             <div class="exec-container">
-                <img class="exec-image"/>
+                <img class="exec-image" src="/sdss-website-images/sdss-exec-pictures/lina.jpg"/>
                 <div class="exec-caption">
                     <div class="exec-name">Lina Jin</div>
                 <img src="/sdss-website-images/exec-seperator.png" class="exec-separator"/>
@@ -49,7 +49,7 @@
                 
             </div>
             <div class="exec-container">
-                <img class="exec-image"/>
+                <img class="exec-image" src="/sdss-website-images/sdss-exec-pictures/rustam.jpg"/>
                 <div class="exec-name">Rustam Atahodja</div>
                 <img src="/sdss-website-images/exec-seperator.png" class="exec-separator"/>
                 <div class="exec-position">Co-President</div>
@@ -60,14 +60,14 @@
         <div class="subteam-title">Operations</div>
         <div class="team-image-row">
             <div class="exec-container">
-                <img class="exec-image"/>
+                <img class="exec-image" src="/sdss-website-images/sdss-exec-pictures/amanda.jpg"/>
                 <div class="exec-name">Amanda Li</div>
                 <img src="/sdss-website-images/exec-seperator.png" class="exec-separator"/>
                 <div class="exec-position">Co-Director of Operations</div>
                 <div class="exec-socials"></div>
             </div>
             <div class="exec-container">
-                <img class="exec-image" src="/sdss-website-images//sdss-exec-pictures/siyi-pfp.JPG"/>
+                <img class="exec-image" src="/sdss-website-images//sdss-exec-pictures/siyi.jpg"/>
                 <div class="exec-name">Siyi Zhu</div>
                 <img src="/sdss-website-images/exec-seperator.png" class="exec-separator"/>
                 <div class="exec-position">Co-Director of Operations</div>
@@ -78,7 +78,7 @@
         <div class="subteam-title">Marketing</div>
         <div class="team-image-row">
             <div class="exec-container">
-                <img class="exec-image"/>
+                <img class="exec-image" src="/sdss-website-images/sdss-exec-pictures/lucy.jpg"/>
                 <div class="exec-caption">
                     <div class="exec-name">Lucia Kim</div>
                 <img src="/sdss-website-images/exec-seperator.png" class="exec-separator"/>
@@ -109,7 +109,7 @@
                 
             </div>
             <div class="exec-container">
-                <img class="exec-image"/>
+                <img class="exec-image" src="/sdss-website-images/sdss-exec-pictures/chinchin.jpg"/>
                 <div class="exec-name">Chin Chin Jim</div>
                 <img src="/sdss-website-images/exec-seperator.png" class="exec-separator"/>
                 <div class="exec-position">Co-Director of Finance</div>
