adding events section and changing nav bar title

--- a/pages/our-teams-pages/consulting.html
+++ b/pages/our-teams-pages/consulting.html
@@ -18,16 +18,16 @@
         <label for="checkbox_toggle" class="hamburger">&#9776;</label>
         <!-- NAVIGATION MENUS -->
         <div class="menu">
-            <li class="About Us"><a href="">About Us</a></li>
+            <li class="About Us"><a href="#about-us">About Us</a></li>
             <li class="our-team-navbar">
-                <a href="#our-teams">Our Team</a>
+                <a href="#our-teams">Our Teams</a>
             <ul class="dropdown">
                 <li><a href="/pages/our-teams-pages/internal-team.html">Internal</a></li>
                 <li><a href="/pages/our-teams-pages/prof-dev.html">Professional Development</a></li>
                 <li><a href="/pages/our-teams-pages/aca-dev.html">Academic Development</a></li>
                 <li><a href="/pages/our-teams-pages/consulting.html">Consulting</a></li>
             </ul>
-            <li><a href="events.html">Events</a></li>
+            <li><a href="#events">Events</a></li>
             <li><a href="contact.html">Contact</a></li>
         </div>
     </ul>
@@ -35,7 +35,7 @@
 
 <body>
     <div class="content">
-        <div class="team-title">Internal Team</div>
+        <div class="team-title">Consulting Team</div>
         <div class="team-description">Our group that enables a diverse community of passionate individuals to explore, learn, grow, and engage in social good in the world of Data Science and Statistics.</div>
         <div class="team-image-row">
             <div class="exec-container">
