added events arrow and trying to fix scroll behaviour

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 <div class="events-container">
                     <div class="events-button-container">
                     <!-- add slideshow -->
-                        <button type="button" class="events-button"></button>
+                        <button type="button" class="events-button"><img class="events-arrow" src="/sdss-website-images/Arrow.png"/></button>
                     </div>
                     <div class="events-description">
                         Our group that enables a diverse community of passionate individuals to explore, learn, grow, and engage in social good in the world of Data Science and Statistics.
@@ -174,7 +174,7 @@
                 <div class="events-container">
                     <div class="events-button-container">
                         <!-- add slideshow -->
-                            <button type="button" class="events-button"></button>
+                            <button type="button" class="events-button"><img class="events-arrow" src="/sdss-website-images/Arrow.png"/></button>
                     </div>
                     <div class="events-description">
                         Our group that enables a diverse community of passionate individuals to explore, learn, grow, and engage in social good in the world of Data Science and Statistics.
@@ -190,29 +190,35 @@
                 Join Us
                 </div>
                 <div class="join-us-description">
-                    <p>Check out the “Roles Documents” linked below to see if we are currently
-                    recruiting for any Executive positions.</p>
+                    <p>Executive applications are currently CLOSED. Please check back again next semester.</p>
 
-                    <p>If not, we would love to have you as one of our general members
-                    where you get many cool benefits.</p>
+                    <p>You can register to be a general member anytime! Anyone can be a general member. Benefits include:</p>
+                    <ul class="gen-mem-benefits">
+                        <li>Be an active part of the SDSS community</li>
+                        <li>Be a part of the SDSS monthly newsletter for data science and statistics highlights throughout the world, resources, event updates, and more</li>
+                        <li>Opportunities to be volunteer/lead events</li>
+                        <li>Priority in future executive selection</li>
+                        <li>Early access to our events</li>
+                        <li>And more!</li>
+                      </ul>
                 </div>
 
                 <img class="join-us-img" src="sdss-website-images/squirrel.png" alt="join us image">
 
                 <div class="join-us-buttons">
-                    <div class="join-us-button">
-                        <a href="https://forms.gle/VYzZGmZhqJVYeJbL9">
-                            <button type="button" class='join-us-executive'>Graphic Designer Application</button>
+                    <!-- <div class="join-us-button">
+                        <a>
+                            <button type="button" class='join-us-executive'>Exec Applications CLOSED</button>
                         </a>
-                    </div>
-                    <div class="join-us-button">
+                    </div> -->
+                    <!-- <div class="join-us-button">
                         <a href="https://forms.gle/pY91K5Ndy3jbpsQZ9">
                             <button type="button" class="join-us-consulting">Consulting Team Application</button>
                         </a>
-                    </div>
+                    </div> -->
                     <div class="join-us-button">
                         <a href="https://forms.gle/GGwNJKUjZECsadFK8">
-                            <button type="button" class="join-us-gen-mem">General Member Application</button>
+                            <button type="button" class="join-us-gen-mem">General Member Registration</button>
                         </a>
                     </div>
                 </div>
