--- a/pages/our-teams-pages/internal-team.html
+++ b/pages/our-teams-pages/internal-team.html
@@ -99,7 +99,7 @@
         <div class="subteam-title">Finance</div>
         <div class="team-image-row">
             <div class="exec-container">
-                <img class="exec-image"/>
+                <img class="exec-image" src="/sdss-website-images/sdss-exec-pictures/jake.jpg"/>
                 <div class="exec-caption">
                     <div class="exec-name">Jake Miao-Marshall</div>
                 <img src="/sdss-website-images/exec-seperator.png" class="exec-separator"/>
