--- a/pages/our-teams-pages/prof-dev.html
+++ b/pages/our-teams-pages/prof-dev.html
@@ -18,7 +18,7 @@
         <label for="checkbox_toggle" class="hamburger">&#9776;</label>
         <!-- NAVIGATION MENUS -->
         <div class="menu">
-            <li class="About Us"><a href="#about-us">About Us</a></li>
+            <li class="about-us-link"><a href="#about-us">About Us</a></li>
             <li class="our-team-navbar">
                 <a href="#our-teams">Our Teams</a>
             <ul class="dropdown">
@@ -89,7 +89,7 @@
                 
             </div>
             <div class="exec-container">
-                <img class="exec-image"/>
+                <img class="exec-image" src="/sdss-website-images/sdss-exec-pictures/jakub.jpg"/>
                 <div class="exec-name">Jakub Riha</div>
                 <img src="/sdss-website-images/exec-seperator.png" class="exec-separator"/>
                 <div class="exec-position">Co-Director of Outreach</div>
