--- a/pages/our-teams-pages/aca-dev.html
+++ b/pages/our-teams-pages/aca-dev.html
@@ -68,7 +68,7 @@
             </div>
 
             <div class="exec-container">
-                <img class="exec-image"/>
+                <img class="exec-image" src="/sdss-website-images/sdss-exec-pictures/yuka.jpg"/>
                 <div class="exec-name">Yuka Saito</div>
                 <img src="/sdss-website-images/exec-seperator.png" class="exec-separator"/>
                 <div class="exec-position">Co-Director of Logistics</div>
