adding some pictures, removed reveal for now

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <nav class="navbar ms-auto" id="navBar">
     <!-- LOGO -->
-    <a href="index.html"><img src="sdss-website-images/black-sdss-logo.png" alt="logo" /></a>
+    <a href="#"><img src="sdss-website-images/black-sdss-logo.png" alt="logo" /></a>
     <!-- NAVIGATION MENU -->
     <ul class="nav-links">
         <input type="checkbox" id="checkbox_toggle" />
@@ -28,6 +28,7 @@
                 <li><a href="/pages/our-teams-pages/consulting.html">Consulting</a></li>
             </ul>
             <li><a href="#events">Events</a></li>
+            <li><a href="#join-us">Join Us</a></li>
             <li><a href="contact.html">Contact</a></li>
         </div>
     </ul>
@@ -72,7 +73,7 @@
     </div>
 
     <div class="content">
-        <div class="about-us reveal" id="about-us">
+        <div class="about-us" id="about-us">
             <div class="subtitle">About Us</div>
             <div class="about-us-container">
                 <div class="about-us-text">
@@ -109,7 +110,7 @@
 
             </div>
         </div>
-        <div class="our-teams reveal" id="our-teams">
+        <div class="our-teams" id="our-teams">
             <div class="subtitle">Our Teams</div>
             <div class="our-teams-container">
                 <div class="row-1">
@@ -141,7 +142,7 @@
 
             </div>
         </div>
-        <div class="events reveal" id="events">
+        <div class="events" id="events">
             <div class="subtitle">
                 Events
             </div>
@@ -184,7 +185,7 @@
             </div>
         </div>
 
-        <div class="join-us reveal">
+        <div class="join-us" id="join-us">
             <div class="join-us-container">
                 <div class="subtitle">
                 Join Us
